🛠️ Fix bug z-index

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -54,4 +54,5 @@ body {
   position: sticky; 
   top: 0; 
   width: 100%; 
+  z-index: 1000;
 }
